--- a/AadharTestNg/test-output/emailable-report.html
+++ b/AadharTestNg/test-output/emailable-report.html
@@ -9,13 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">45,485</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">79,047</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">com.LoginAndRegistrationTest</td><td><a href="#m0">Launch</a></td><td rowspan="1">1691001340475</td><td rowspan="1">2766</td></tr><tr class="passedeven"><td><a href="#m1">testNewAadharCardApplication</a></td><td rowspan="1">1691001369928</td><td rowspan="1">10345</td></tr><tr class="passedeven"><td><a href="#m2">testValidLogin</a></td><td rowspan="1">1691001345938</td><td rowspan="1">4065</td></tr><tr class="passedeven"><td><a href="#m3">testValidRegistration</a></td><td rowspan="1">1691001352146</td><td rowspan="1">15478</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">com.LoginAndRegistrationTest</td><td><a href="#m0">Launch</a></td><td rowspan="1">1691055242465</td><td rowspan="1">3867</td></tr><tr class="passedeven"><td><a href="#m1">testValidLogin</a></td><td rowspan="1">1691055254282</td><td rowspan="1">9319</td></tr><tr class="passedeven"><td><a href="#m2">testValidRegistration</a></td><td rowspan="1">1691055285517</td><td rowspan="1">10482</td></tr></tbody>
 </table>
 <h2>Default test</h2><h3 id="m0">com.LoginAndRegistrationTest#Launch</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.LoginAndRegistrationTest#testNewAadharCardApplication</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.LoginAndRegistrationTest#testValidLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.LoginAndRegistrationTest#testValidRegistration</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.LoginAndRegistrationTest#testValidLogin</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">com.LoginAndRegistrationTest#testValidRegistration</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
